# gRPEAKEC-go

./: .gitignore  .gitmodules  README.md  azure-pipelines.yaml  doc_api.go  functions.go  functions_test.go  go.mod  go.sum  makefile  pip-freeze.txt  setup.cfg  tools.go
docs/: .buildinfo  genindex.html  index.html  objects.inv  pkerr.html  pkservices.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  pkerr.rst.txt  pkservices.rst.txt
docs/_static/: godoc-root.html  godoc.10.html  godoc.11.html  godoc.12.html  godoc.13.html  godoc.14.html  godoc.15.html  godoc.3.html  godoc.4.html  godoc.5.html  godoc.6.html  godoc.7.html  godoc.8.html  godoc.9.html  proto.html
pkclients/: doc.go  waitForGrpcServer.go
pkerr/: apiError.go  apiError_test.go  doc.go  examples_test.go  generator.go  generatorInterceptors.go  generatorInterceptors_test.go  generatorMiddleware.go  generatorMiddleware_test.go  generator_test.go  handlePanic.go  notFoundMiddleware.go  notFoundMiddleware_test.go  protogenAliases.go  sentinelErr.go  sentinelErrDefaults.go  sentinelErrDefaults_test.go  sentinelIssuer.go
pkerr/protogen/: doc.go  error.pb.go  errorMethods.go
pkmiddleware/: clientInterceptors.go  logging.go  serverInterceptors.go
pkservices/: doc.go  errs.go  examples_test.go  manager.go  managerOpts.go  managerTester.go  manager_test.go  pingService.go  service.go
pkservices/protogen/: doc.go  ping_service.pb.go
pksync/: concurrentMap.go  concurrentMap_test.go  ctxWaitGroup.go  ctxWaitGroup_test.go  doc.go
pktesting/: assertErr.go  assertionsInterface.go  doc.go  managerSuite.go  mockServiceAliases.go  timeoutCtx.go
protogen/: doc.go  error.pb.go  ping_service.pb.go  test_service.pb.go
(+26 files in other folders)
