[version]
target = 0.2
release = 

[metadata]
name = grpcErr
git_org = github.com/peake100

[testing]
coverage_required = 0.85
test_package = ./...
exclude =
	./pkerr/protogen
	./pkservices/protogen
	./pktesting/protogen

[options]
setup_requires = 
	setuptools
install_requires = 
tests_require = 
dependency_links = 

[docs.proto]
paths =
	./grpeakec_proto
	./cereal_proto/uuid.proto

[proto]
root_source_path = ./grpeakec_proto
root_go_package =  github.com/peake100/gRPEAKEC-go
python_output_path = 
python_import_original = 
python_import_replacement = 

[options.extras_require]
dev = 
lint = 
doc = 
	sphinx
	sphinx_rtd_theme
build = 
	packaging
test = 

[build_sphinx]
project = grpcErr
copyright = '2021, Billy Peake'
source-dir = ./zdocs/source
build-dir = ./zdocs/build

